txttc/txtt-lib/tests/grammar.bnf
<start> ::= <template> ;
<template> ::= <template> <token> | <token> ;
<token> ::= <texts> | <key> | <option> | <constant> ; 

<key> ::= "{" <ident> "}" ;
<option> ::= "$" <key> ;
<constant> ::= "$" <ident> ;

<texts> ::= <texts> <text> | <text> ;
<text> ::= <letters> | <whitespaces> ;

<ident> ::= <ident> <identsymbol> | <identsymbol> ;
<identsymbol> ::= <letter> | <digit> ;

<letters> ::= <letters> <letter> | <letter> ;
<letter> ::= "A" | "B" | "C" | "D" | "E" | "F" | "G" | "H" | "I" | "J" | "K" | "L" | "M" | "N" | "O" | "P" | "Q" | "R" | "S" | "T" | "U" | "V" | "W" | "X" | "Y" | "Z" | "a" | "b" | "c" | "d" | "e" | "f" | "g" | "h" | "i" | "j" | "k" | "l" | "m" | "n" | "o" | "p" | "q" | "r" | "s" | "t" | "u" | "v" | "w" | "x" | "y" | "z" ;
<digit> ::= "0" | "1" | "2" | "3" | "4" | "5" | "6" | "7" | "8" | "9" ;
<whitespaces> ::= <whitespaces> <whitespace> | <whitespace> ;
<whitespace> ::= " " | "\t" | "\n" ;
